bugs/tests/fuzz-05-18-13-21-59/r_592_r_925_issue3616_F10_P925_8_M1.stderr
fuzz/fuzz0/illtyped/r_925_issue3616_F10_P925_8_M1.p4(15): [--Werror=type-error] error: a(a) is not a method
c = ((a) (a)),
     ^^^^^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

